# PolyhedralTemplateMatching

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README  README.md  conanfile.py
include/volt/: polyhedral_template_matching_engine.h  polyhedral_template_matching_service.h  ptm_cluster_builder.h  ptm_cluster_input_adapter.h  ptm_neighbor_finder.h  ptm_structure_analysis.h
include/volt/analysis/: ptm.h  ptm_cluster_rule_provider.h  ptm_local_atom_state.h  ptm_service.h  ptm_structure_analysis.h
include/volt/analysis/internal/: ptm_crystal_info_provider.h  ptm_structure_analysis_detail.h
src/: main.cpp  polyhedral_template_matching.cpp  polyhedral_template_matching_engine.cpp  polyhedral_template_matching_service.cpp  ptm_cluster_builder.cpp  ptm_cluster_input_adapter.cpp  ptm_crystal_info_provider.cpp  ptm_neighbor_finder.cpp  ptm_structure_analysis_detail.h  structure_analysis_ptm.cpp
src/analysis/: ptm.cpp  ptm_cluster_input_adapter.cpp  ptm_cluster_rule_provider.cpp  ptm_crystal_info_provider.cpp  ptm_service.cpp  ptm_structure_analysis.cpp
src/analysis/internal/: ptm_structure_analysis_detail.h
